# legalit

./: MOCK.md  README.md
backend/: .env.example  .env.template  .gitignore  main.py  pyproject.toml  test.py
backend/app/: settings.py
backend/app/api/routers/: base.py  chat.py  upload.py
backend/app/core/: llm.py  prompts.py
backend/app/engine/: index.py
backend/app/engine/loaders/: __init__.py  file.py
backend/app/utils/: as_form.py
backend/tests/: documents.pkl  documents1.pkl  llama_parse.ipynb  test.ipynb
frontend/: .env  .gitignore  package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/app/components/: chat-section.tsx  footer.tsx  header.tsx  sidebar.tsx
frontend/app/components/ui/: button.tsx  context-uploader.tsx  file-uploader.tsx  upload-file-preview.tsx
frontend/app/components/ui/chat/: chat-input.tsx  chat-message.tsx  chat-messages.tsx  chat.interface.ts  upload.interface.tsx
frontend/app/contexts/: user-context.tsx
