[tool]
[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = [ "Marcus Schiesser <mail@marcusschiesser.de>" ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
fastapi = "^0.109.1"
python-dotenv = "^1.0.0"
llama-index = "^0.10.29"
llama-index-core = "^0.10.29"
llama-index-indices-managed-vectara = "^0.1.4"
llama-index-llms-together = "^0.1.3"
python-multipart = "^0.0.9"
unstructured = {extras = ["pdf"], version = "^0.13.2"}

[tool.poetry.dependencies.uvicorn]
extras = [ "standard" ]
version = "^0.23.2"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"